@@ -110,6 +110,13 @@ This is a utility that allows several different actions to be performed (relativ
 
         Create enough keys for the given policy to last for the period of time given by interval.
 
+    key ds-seen
+        --zone <zone>                         aka -z
+        --keytag <keytag>                     aka -x
+		--cka_id <CKA_ID>                     aka -k
+
+        Indicate that a submitted DS record has appeared in the parent zone. Specifiying a zone will speed up the search of keys by narrowing the field but is not mandatory; cka_id can be used to resolve a keytag clash.
+
 	backup done --repository <repository>     aka -r
         
         Indicate that a backup of the given repository has been done, all non-backed up keys will now be marked as backed up.
